# FoolOfREST

./: .env.backend.example  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
FoolOfRESTAPI/: .dockerignore  ApiKey.cs  Dockerfile  Program.cs  PythonLogger.cs  appsettings.Development.json
FoolOfRESTAPI/TelegramLogger/: Handlers.py  pyproject.toml  requirements.txt
FoolOfRESTWeb/: ApiKey.cs  Dockerfile
FoolOfRESTWeb/Controllers/: TelegramController.cs
